# NextRoofWeb

./: .docker-compose.dev.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  hide.txt  manage.py  nginx.conf  pyproject.toml
NextRoofWeb/: asgi.py  settings.py  urls.py  wsgi.py
core/: manage.py
core/NextRoofWeb/: asgi.py  urls.py  wsgi.py
core/NextRoofWeb/settings/: __init__.py  base.py  docker.py  envvars.py  logging.py
core/core/utils/: cryptography.py  settings.py  types.py
core/data/: Predicted_DB.csv
core/main/: asset_value.py  base_functions.py  models.py  session.py  urls.py  views.py
core/main/calculator/: api.py  calculator_view.py
core/main/migrations/: 0001_initial.py  0002_delete_userprofile_delete_deals.py
core/main/templates/: ad.html  asset_value.html  dashboard.html  edit_profile.html  error.html  home.html  index.html  login.html  map.html  map_snippet.html  post.html  profile.html  register.html  search.html
core/main/utils/: base_utils.py  calc_utils.py  distance.py  plots.py  (+4 more)
core/static/: neighborhoods.json  scaler.pkl
data/: Predicted_DB.csv
main/: asset_value.py  base_functions.py  urls.py  views.py
main/templates/: asset_value.html  home.html  index.html  login.html  ready.html  search.html
scripts/: entrypoint.sh  production_data.py
static/: neighborhoods.json  saved_models.pkl  scaler.pkl
static/css/: asset_value.css  home.css  index.css  ready.css  ready.css.map  ready.scss  search.css
static/js/: asset_value.js  index.js  search.js
(+30 files in other folders)
