# Basic metadata about the project
[tool.poetry]
name = "nextroofweb"
version = "0.1.0"
description = ""
authors = ["yoavlv <yoavlv12@gmail.com>"]
license = "MIT"
readme = "README.md"

# List of dependencies required for the project
[tool.poetry.dependencies]
python = "^3.11.0"
django = "4.2.4"
psycopg2 = "2.9.7"
pyyaml = "6.0.1"
django-extensions = "3.2.3"
whitenoise = "6.5.0"
django-split-settings= "1.2.0"
flake8 = "6.1.0"
joblib = "1.3.1"
lightgbm = "3.3.5"
matplotlib = "3.7.2"
numpy = "1.25.0"
pandas = "2.0.3"
plotly = "5.15.0"
poetry = "1.6.1"
pre-commit = "3.3.3"
pydantic = "2.3.0"
pynacl = "1.5.0"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
requests = "2.31.0"
scikit-learn = "1.3.0"
tomlkit = "0.12.1"
urllib3 = "2.0.4"
xgboost = "1.7.6"
daphne = "4.0.0"
catboost = "1.2"
cryptography = "41.0.3"
sqlparse = "0.4.4"
tenacity = "8.2.3"

# Dependencies used only for development and not in the final build
[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

# Specifications for building the project
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
